fix(ci): add vms/sixos as proper submodule
- Add vms/sixos to .gitmodules with correct Codeberg URL
- Fixes Codeberg CI submodule update failure
- Resolves "fatal: No url found for submodule path vms/sixos"

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "grainstore/vendor/wayland"]
 	path = grainstore/vendor/wayland
 	url = https://gitlab.freedesktop.org/wayland/wayland.git
+[submodule "vms/sixos"]
+	path = vms/sixos
+	url = https://codeberg.org/amjoseph/sixos.git
