fix: CI workflow - use bb flow instead of non-existent writings:build
CI FIX:
- Changed 'bb writings:build' to 'bb flow'
- The writings:build task doesn't exist in our bb.edn
- bb flow will handle the build process correctly
- This should fix the GitHub Actions CI failure

The CI was failing because it was looking for a task that doesn't exist.
Our root bb.edn delegates to grainbarrel, so we use bb flow instead.

now == next + 1 🌾

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build content with Babashka
         run: |
           echo "Starting babashka build..."
-          bb writings:build
+          bb flow "CI: build content for deployment"
           echo "Babashka build completed successfully"
 
       - name: Build SvelteKit site
