--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,11 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           echo "Verifying babashka installation..."
           $HOME/.local/bin/bb --version
+          echo "Creating bb symlink in grainstore/grainbarrel..."
+          mkdir -p grainstore/grainbarrel
+          ln -sf $HOME/.local/bin/bb grainstore/grainbarrel/bb
+          echo "Verifying bb is available in grainstore/grainbarrel..."
+          ls -la grainstore/grainbarrel/bb
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
