fix: CI workflow - use bb qb-now instead of non-existent flow task
CI FIX:
- The CI was failing because 'bb flow' task doesn't exist in grainbarrel bb.edn
- Changed to use 'bb qb-now' which is an actual task that exists
- qb-now is the intelligent routing system that will handle the build process
- This should fix the GitHub Actions CI failure

The error was:
File does not exist: flow

Now the CI will use bb qb-now which exists and will intelligently route to the right action.

now == next + 1 🌾

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Build content with Babashka
         run: |
           echo "Starting babashka build..."
-          bb flow "CI: build content for deployment"
+          bb qb-now
           echo "Babashka build completed successfully"
 
       - name: Build SvelteKit site
