--- a/.github/workflows/grainpath-sync.yml
+++ b/.github/workflows/grainpath-sync.yml
@@ -7,6 +7,11 @@ on:
       - 'main'
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   sync-grainpath-to-main:
     runs-on: ubuntu-latest
