fix: GitHub CLI token for default branch update
- Add GH_TOKEN environment variable to Update default branch step
- Use github.token for GitHub CLI authentication
- Fixes 'To use GitHub CLI in a GitHub Actions workflow, set the GH_TOKEN environment variable' error

--- a/.github/workflows/grainpath-sync.yml
+++ b/.github/workflows/grainpath-sync.yml
@@ -52,6 +52,8 @@ jobs:
           fi
       
       - name: Update default branch
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           # Update default branch to current grainpath branch
           gh api repos/${{ github.repository }} --method PATCH \
