fix: Remove default branch update step requiring admin permissions
- Remove GitHub CLI step that tries to update default branch
- Add informational message about manual default branch update
- Fixes 'Resource not accessible by integration (HTTP 403)' error

The grainpath-sync workflow will now successfully sync to main without
requiring admin permissions for default branch updates.

--- a/.github/workflows/grainpath-sync.yml
+++ b/.github/workflows/grainpath-sync.yml
@@ -49,16 +49,9 @@ jobs:
             git commit -m "Sync grainpath branch: ${{ github.ref_name }}"
             git push origin main
             echo "✅ Synced grainpath branch to main"
+            echo "📝 Note: Default branch update requires admin permissions"
+            echo "   Manually set default branch to: ${{ github.ref_name }}"
           fi
-      
-      - name: Update default branch
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          # Update default branch to current grainpath branch
-          gh api repos/${{ github.repository }} --method PATCH \
-            --field default_branch=${{ github.ref_name }}
-          echo "✅ Updated default branch to ${{ github.ref_name }}"
 
   deploy-github-pages:
     runs-on: ubuntu-latest
