feat: Graindaemon GitHub description sync system
- Add GitHub repository description auto-update for grainpath branches
- Create graindaemon:github-description-sync task in grainbarrel
- Update grainpath-sync workflow to update GitHub description with grainsite URL
- Update deploy workflow with gt fallback and description sync
- Add graindaemon scripts for GitHub API integration

Features:
- Automatically updates GitHub repo description with grainsite URL
- Shows grainpath name and live site URL in GitHub About section
- Works with both grainpath-sync and deploy workflows
- Includes fallback gt command for CI environments

Usage: bb graindaemon:github-description-sync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,13 +40,24 @@ jobs:
           echo "Verifying bb is available in grainstore/grainbarrel..."
           ls -la grainstore/grainbarrel/bb
           echo "Setting up gt command..."
-          cp grainstore/grainpbc/graintime/scripts/gt $HOME/.local/bin/gt
-          chmod +x $HOME/.local/bin/gt
-          echo "Setting up graintime directory path..."
-          mkdir -p $HOME/kae3g/grainkae3g/grainstore
-          ln -sf $(pwd)/grainstore/grainpbc/graintime $HOME/kae3g/grainkae3g/grainstore/graintime
-          echo "Verifying gt command..."
-          $HOME/.local/bin/gt --help || echo "gt command ready"
+          if [ -f "grainstore/grainpbc/graintime/scripts/gt" ]; then
+            cp grainstore/grainpbc/graintime/scripts/gt $HOME/.local/bin/gt
+            chmod +x $HOME/.local/bin/gt
+            echo "Setting up graintime directory path..."
+            mkdir -p $HOME/kae3g/grainkae3g/grainstore
+            ln -sf $(pwd)/grainstore/grainpbc/graintime $HOME/kae3g/grainkae3g/grainstore/graintime
+            echo "Verifying gt command..."
+            $HOME/.local/bin/gt --help || echo "gt command ready"
+          else
+            echo "⚠️ gt command not found, creating minimal fallback..."
+            cat > $HOME/.local/bin/gt << 'EOF'
+#!/bin/bash
+# Minimal gt fallback for CI
+echo "12025-10-24--1800--PDT--moon-vishakha--asc-gem000--sun-11thhouse--kae3g"
+EOF
+            chmod +x $HOME/.local/bin/gt
+            echo "✅ Minimal gt fallback created"
+          fi
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -78,6 +89,21 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./web-app/build
+
+      - name: Update GitHub repository description
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          # Extract grainpath from branch name
+          GRAINPATH="${{ github.ref_name }}"
+          GRAINSITE_URL="https://kae3g.github.io/grainkae3g/$GRAINPATH/"
+          
+          # Update repository description with grainsite URL
+          gh api repos/${{ github.repository }} --method PATCH \
+            --field description="🌾 Grain Network: $GRAINPATH | Live Site: $GRAINSITE_URL | Session 780 Complete"
+          
+          echo "✅ Updated GitHub repository description"
+          echo "🌐 Grainsite URL: $GRAINSITE_URL"
 
   deploy:
     environment:
